# Supermarket_system

./: .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  Makefile  README.md  STOCK_SYSTEM_REPORT.py  TEST_STOCK_README.md  WSL_COMMANDS.txt  alembic.ini  dashboard_verification_report.json  populate_db.sh  pyproject.toml  requirements.txt  reset_all_sales.py  run_db_check_wsl.sh  run_streamlit.py  run_test_linux.sh  run_test_windows.bat  setup.sh  setup_auth_and_test.py  simple_auth_test.py  simple_model_test.py  test_dashboard_endpoint.py  test_dashboard_today.py  test_dashboard_top_products.py  test_final_success.py  test_foreign_key_fix.py  test_foreign_key_simple.py  test_stock_api_endpoints.py  test_stock_migration.py  test_stock_schemas.py  test_stock_service_implementation.py  test_stock_system.py  test_stock_system_fixed.py  test_system.sh  update_defaults.py  verify_dashboard_fix.py
app/: __init__.py  main.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
scripts/: add_completed_sales.py  check_database.py  check_database_structure.py  check_database_structure_wsl.py  check_low_stock.py  check_products.py  check_suppliers_table.py  clean_test_sales.py  compare_databases.py  create_admin.py  create_sample_products.py  create_stock_migration.py  create_stock_tables.py  debug_detailed.py  debug_report_endpoint.py  debug_sales_completed.py  debug_sales_today.py  debug_stock_endpoints.py  emergency_debug.py  finalize_stock_setup.py  fix_stock_tables.py  fix_timestamps.py  init_project.py  list_categories.py  (+6 more)
(+49 files in other folders)
